--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -4,11 +4,11 @@
 
 {% block content %}
 
-<div class="container-wrapper">
+<div class="container-wrapper1">
     <div class="hero-img">
 
     </div>
-    <div class="content-wrapper main-column">
+    <div class="content-wrapper1 main-column">
         <div class="text-area content">
             <!-- Title and about us sections -->
             <h1 class="text-center  green-heading cursive-heading ">
@@ -43,13 +43,13 @@
                                 <p>Afrik Kitchen is one of best restaurant in Bremen City Germany, Europ
                                     that offer African Dishes and Event booking and organisation
                                 </p>
-                                <p> Our staff are polite ,friendly and equally happy taking your Order and 
+                                <p> Our staff are polite ,friendly and equally happy taking your Order and
                                     serving.</p>
-                                <p>  We partner with of Natural fruit Juice and Water industry Just to serve You better
+                                <p> We partner with of Natural fruit Juice and Water industry Just to serve You better
                                     Explore the their website;
-                                <a  class="green-heading" href="https://www.kaylyjuice.co.za/" target="_blank" rel="noopener"
-                                                aria-label="Visit our twitter page (opens in a new tab)">
-                                                <i class="fa-solid fa-martini-glass-citrus ms-3"></i> </a></p>
+                                    <a class="green-heading" href="https://www.kaylyjuice.co.za/" target="_blank"
+                                        rel="noopener" aria-label="Visit our twitter page (opens in a new tab)">
+                                        <i class="fa-solid fa-martini-glass-citrus ms-3"></i> </a></p>
                             </div>
                         </div>
                     </div>
@@ -135,7 +135,7 @@
             </section>
 
             <footer class="footer">
-                <h2 class="text-center white" style="color: white" >Find Us</h2>
+                <h2 class="text-center white" style="color: white">Find Us</h2>
                 <div class="container-wrapper  bg-success">
                     <div class="row">
                         <div class="col-md">
