--- a/food/templates/food/delete_menuitem.html
+++ b/food/templates/food/delete_menuitem.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %}
 
+{% load static %}  <!-- Add this line to load the static template tag -->
+
+<!-- Main StyleSheet -->
+<link rel="stylesheet" href="{% static 'css/menu_item.css' %}">
+{% block extra_css %}{% endblock %}
+
 {% block content %}
     <div class="form-section">
         <h1 class="green-heading cursive-heading">Delete Menu</h1>
@@ -12,32 +18,4 @@
         </form>
     </div>
 
-    <style>
-        .form-section {
-            margin: 20px auto;
-            max-width: 900px;
-            padding: 20px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            background-color: #f9f9f9;
-        }
-
-        .form-section p {
-            font-size: 18px;
-            margin-bottom: 10px;
-        }
-
-        .form-section button[type="submit"] {
-            padding: 10px 20px;
-            background-color: #dc3545;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-
-        .form-section button[type="submit"]:hover {
-            background-color: #c82333;
-        }
-    </style>
-{% endblock %}
+    {% endblock %}
