--- a/food/templates/food/foodxx.html
+++ b/food/templates/food/foodxx.html
@@ -79,7 +79,7 @@
             <h1 class="green-heading cursive-heading">View Menu</h1>
         </div>
         
-            <h2 class="section-heading">Breakfast</h2>
+            <h2 class="section-heading green-heading cursive-heading ">Breakfast</h2>
             {% for menuitem in menuitem %}
                 {% if menuitem.type == 'BREAKFAST' %}
                     <div class="card">
