--- a/food/templates/food/menu_list.html
+++ b/food/templates/food/menu_list.html
@@ -1,152 +1,82 @@
 {% extends "base.html" %}
 
+{% load static %}
+
+
 {% block content %}
-  <style>
-        .card {
-            width: auto;
-            max-width: 400px;
-            margin: 0 auto 20px;
-            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-            transition: 0.3s;
-            border-radius: 5px;
-            display: grid;
-            grid-template-columns: 1fr 1fr 1fr;
-            text-align: center;
-        }
 
-        .card-img-top {
-            width: 100%;
-            height: auto;
-            object-fit: cover;
-            border-top-left-radius: 5px;
-            border-top-right-radius: 5px;
-        }
+<div class="text-center">
+    <div>
+        <h1 class="green-heading cursive-heading">View Menu</h1>
+    </div>
 
-        .card-body {
-            padding: 20px;
-            display: grid;
-            grid-template-columns: 1fr;
-            gap: 10px;
-            align-items: center;
-        }
-        h1{
-            align-text: center
-        }
-
-        .card-title {
-            margin: 0;
-        }
-
-        .container {
-            /* display: grid;  */
-            grid-template-columns: repeat(3, 1fr);
-            background-color: rgb(238, 231, 231);
-            grid-gap: 20px;
-            margin: 0 auto;
-            max-width: 70%;
-            overflow: auto; /* Added */
-        }
-
-        .section-heading {
-            margin: 40px 0;
-            font-size: 24px;
-            font-weight: bold;
-        }
-
-        .container > * {
-            white-space: nowrap; /* Added */
-        }
-
-         @media (max-width: 768px) {
-            .container {
-                grid-template-columns: repeat(2, 1fr);
-                grid-template-columns: none;
-            }
-        }  
-
-         @media (max-width: 576px) {
-            .container {
-                grid-template-columns: 1fr;
-            }
-
-            .card{
-                grid-template-columns: 1fr;
-            }
-        } 
-    </style>
-
-    <div class="text-center">
-        <div >
-            <h1 class="green-heading cursive-heading">View Menu</h1>
+    <h2 class="section-heading green-heading cursive-heading ">Breakfast</h2>
+    {% for menuitem in menuitem %}
+    {% if menuitem.type == 'BREAKFAST' %}
+    <div class="card1">
+        <div class="card-body1">
+            <img class="card-img-top-1" src="{{ menuitem.fimage }}" alt="Menu Image">
         </div>
-        
-            <h2 class="section-heading">Breakfast</h2>
-            {% for menuitem in menuitem %}
-                {% if menuitem.type == 'BREAKFAST' %}
-                    <div class="card">
-                        <div class="card-body">
-                            <img class="card-img-top" src="{{ menuitem.fimage }}" alt="Menu Image">
-                        </div>
-                        <div class="card-body">
-                            <h5 class="card-title">{{ menuitem.name }}</h5>
-                        </div>
-                        <div class="card-body">
-                            <a href="{% url 'food:detail' menuitem.pk %}" class="btn btn-success">Detail</a>
-                        </div>
-                    </div>
-                {% endif %}
-            {% endfor %}
-
-            <h2 class="section-heading">Lunch</h2>
-            {% for menuitem in menuitem %}
-                {% if menuitem.type == 'LUNCH' %}
-                    <div class="card">
-                        <div class="card-body">
-                            <img class="card-img-top" src="{{ menuitem.fimage }}" alt="Menu Image">
-                        </div>
-                        <div class="card-body">
-                            <h5 class="card-title">{{ menuitem.name }}</h5>
-                        </div>
-                        <div class="card-body">
-                            <a href="{% url 'food:detail' menuitem.pk %}" class="btn btn-success">Detail</a>
-                        </div>
-                    </div>
-                {% endif %}
-            {% endfor %}
-
-            <h2 class="section-heading">Dinner</h2>
-            {% for menuitem in menuitem %}
-                {% if menuitem.type == 'DINNER' %}
-                    <div class="card">
-                        <div class="card-body">
-                            <img class="card-img-top" src="{{ menuitem.fimage }}" alt="Menu Image">
-                        </div>
-                        <div class="card-body">
-                            <h5 class="card-title">{{ menuitem.name }}</h5>
-                        </div>
-                        <div class="card-body">
-                            <a href="{% url 'food:detail' menuitem.pk %}" class="btn btn-success">Detail</a>
-                        </div>
-                    </div>
-                {% endif %}
-            {% endfor %}
-
-            <h2 class="section-heading">Side</h2>
-            {% for menuitem in menuitem %}
-                {% if menuitem.type == 'SIDE' %}
-                    <div class="card">
-                        <div class="card-body">
-                            <img class="card-img-top" src="{{ menuitem.fimage }}" alt="Menu Image">
-                        </div>
-                        <div class="card-body">
-                            <h5 class="card-title">{{ menuitem.name }}</h5>
-                        </div>
-                        <div class="card-body">
-                            <a href="{% url 'food:detail' menuitem.pk %}" class="btn btn-success">Detail</a>
-                        </div>
-                    </div>
-                {% endif %}
-            {% endfor %}
+        <div class="card-body1">
+            <h5 class="card-title1">{{ menuitem.name }}</h5>
+        </div>
+        <div class="card-body1">
+            <a href="{% url 'food:detail' menuitem.pk %}" class="btn btn-success">Detail</a>
         </div>
     </div>
+    {% endif %}
+    {% endfor %}
+
+    <h2 class="section-heading green-heading cursive-heading ">Lunch</h2>
+    {% for menuitem in menuitem %}
+    {% if menuitem.type == 'LUNCH' %}
+    <div class="card1">
+        <div class="card-body1">
+            <img class="card-img-top1" src="{{ menuitem.fimage }}" alt="Menu Image">
+        </div>
+        <div class="card-body1">
+            <h5 class="card-title">{{ menuitem.name }}</h5>
+        </div>
+        <div class="card-body1">
+            <a href="{% url 'food:detail' menuitem.pk %}" class="btn btn-success">Detail</a>
+        </div>
+    </div>
+    {% endif %}
+    {% endfor %}
+
+    <h2 class="section-heading green-heading cursive-heading ">Dinner</h2>
+    {% for menuitem in menuitem %}
+    {% if menuitem.type == 'DINNER' %}
+    <div class="card1">
+        <div class="card-body1">
+            <img class="card-img-top1" src="{{ menuitem.fimage }}" alt="Menu Image">
+        </div>
+        <div class="card-body1">
+            <h5 class="card-title1">{{ menuitem.name }}</h5>
+        </div>
+        <div class="card-body1">
+            <a href="{% url 'food:detail' menuitem.pk %}" class="btn btn-success">Detail</a>
+        </div>
+    </div>
+    {% endif %}
+    {% endfor %}
+
+    <h2 class="section-heading green-heading cursive-heading ">Side</h2>
+    {% for menuitem in menuitem %}
+    {% if menuitem.type == 'SIDE' %}
+    <div class="card1">
+        <div class="card-body1">
+            <img class="card-img-top1" src="{{ menuitem.fimage }}" alt="Menu Image">
+        </div>
+        <div class="card-body1">
+            <h5 class="card-title1">{{ menuitem.name }}</h5>
+        </div>
+        <div class="card-body1">
+            <a href="{% url 'food:detail' menuitem.pk %}" class="btn btn-success">Detail</a>
+        </div>
+    </div>
+    {% endif %}
+    {% endfor %}
+</div>
+</div>
 {% endblock %}
