--- a/templates/base.html
+++ b/templates/base.html
@@ -9,13 +9,14 @@
     <meta name="keywords" content="steak, restaurant, food,  Breakfast, Lunch, dinner, sides, drinks, Event, Table, Booking">
     <meta name="description" content="African  Restaurant in Bremen, Germany Europ">
     {% load static %}
+    {% load static %}
     {% block css %}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/css/bootstrap.min.css" integrity="sha512-GQGU0fMMi238uA+a/bdWJfpUGKUkBdgfFdgBm72SUQ6BeyWjoY/ton0tEjH+OSH9iP4Dfh+7HM0I9f5eR0L/4w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
-    <!-- Import css -->
+    <!-- Import common styles -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    
+    <link rel="stylesheet" href="{% static 'css/menu_list.css' %}">
 
     {% endblock %}
     <!-- Javascript files -->
@@ -75,7 +76,6 @@
     {% endif %}
     
 
-
     </main>
 
     <!-- Footer -->
@@ -97,7 +97,7 @@
     {% endblock %}
 
     <!-- Your custom JavaScript files -->
-    <script src="{% static 'js/script.js' %}"></script>
+    <!-- <script src="{% static 'js/script.js' %}"></script> -->
    
 </body>
 
