Fixing errors in the Templates

--- a/booking/templates/booking/managebookings.html
+++ b/booking/templates/booking/managebookings.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+ <!-- for managing table booking -->
 {% block content %}
   <h2>Create a Booking</h2>
   <form method="POST" action="{% url 'booking:create_booking' %}">
