--- a/booking/templates/booking/tableavaliable_form.html
+++ b/booking/templates/booking/tableavaliable_form.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book a table</title>
+    <title>Book a table form</title>
 </head>
 <body>
     <form action="" method="POST">
