--- a/food/templates/food/create_menu.html
+++ b/food/templates/food/create_menu.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
-
-{% load static %}  <!-- Add this line to load the static template tag -->
+<!-- Template for creating menu item-->
+{% load static %}  
 
 <!-- Main StyleSheet -->
 <link rel="stylesheet" href="{% static 'css/menu.css' %}">
