--- a/food/templates/food/menu_list.html
+++ b/food/templates/food/menu_list.html
@@ -1,10 +1,7 @@
 {% extends "base.html" %}
-
+<!-- Template for the View Menu -->
 {% load static %}
-
-
 {% block content %}
-
 <div class="text-center">
     <div>
         <h1 class="green-heading cursive-heading">View Menu</h1>
