--- a/food/templates/food/update_menu.html
+++ b/food/templates/food/update_menu.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+ <!-- Template for editing /updating menu tag -->
 {% block content %}
     <div class="form-section">
         <h1 class="green-heading cursive-heading text-center">Update Menu</h1>
@@ -30,7 +30,7 @@
         }
 
         .form-section button[type="submit"]:hover {
-            * background-color: green; *
+             background-color: green; 
         }
 
 /* Media queries for mobile responsiveness */
