--- a/booking/templates/booking_list.html
+++ b/booking/templates/booking_list.html
@@ -1,17 +1,20 @@
 {% load static %}
+ <!-- This template is for management  of the booked table-->
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/css/bootstrap.min.css" integrity="sha512-GQGU0fMMi238uA+a/bdWJfpUGKUkBdgfFdgBm72SUQ6BeyWjoY/ton0tEjH+OSH9iP4Dfh+7HM0I9f5eR0L/4w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/css/bootstrap.min.css"
+        integrity="sha512-GQGU0fMMi238uA+a/bdWJfpUGKUkBdgfFdgBm72SUQ6BeyWjoY/ton0tEjH+OSH9iP4Dfh+7HM0I9f5eR0L/4w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Booking List</title>
     <script src="https://kit.fontawesome.com/692189991f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static '/css/booking_list.css' %}">
 </head>
-
 <body>
     <div class="content">
         <div class="header">
@@ -22,12 +25,11 @@
             <div class="home">
                 <!-- Div 1: Back to BookingHome -->
                 <div class="home">
-                    <a href="{% url 'booking:TableListView' %}"><i class="fas fa-arrow-alt-circle-left"></i> BookingHome</a>
+                    <a href="{% url 'booking:TableListView' %}"><i class="fas fa-arrow-alt-circle-left"></i>
+                        BookingHome</a>
                 </div>
             </div>
-
         </div>
-
         <div class="bookings">
             {% for booking in booking_list %}
             <div class="booking">
@@ -46,10 +48,12 @@
                 <div class="capacity">
                     <h3>wheelchair accessibilty: {{booking.table.wheelchair_accessible}}</h3>
                 </div>
-                
-                <div class="delete"><a href="{% url 'booking:delete_booking' booking.id %}"><i class="far fa-2x fa-times-circle"></i> Cancel Booking</a></div>
-                <div class="edit_booking_form"><a href="{% url 'booking:edit_booking' booking.id %}"><i class="far fa-2x fa-edit"></i> Edit Booking</a></div>
-                
+
+                <div class="delete"><a href="{% url 'booking:delete_booking' booking.id %}"><i
+                            class="far fa-2x fa-times-circle"></i> Cancel Booking</a></div>
+                <div class="edit_booking_form"><a href="{% url 'booking:edit_booking' booking.id %}"><i
+                            class="far fa-2x fa-edit"></i> Edit Booking</a></div>
+
             </div>
             {% endfor %}
         </div>
@@ -57,5 +61,3 @@
 </body>
 
 </html>
-
-
