--- a/food/templates/food/delete_menuitem.html
+++ b/food/templates/food/delete_menuitem.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
-
-{% load static %}  <!-- Add this line to load the static template tag -->
+<!--Template for deleting food Item -->
+{% load static %}  
 
 <!-- Main StyleSheet -->
 <link rel="stylesheet" href="{% static 'css/menu_item.css' %}">
