--- a/static/css/table_detail.css
+++ b/static/css/table_detail.css
@@ -1,4 +1,4 @@
-/* Root CSS */
+/* Style for the table (concallation, form an */
 
 *{
     padding:0px;
@@ -36,33 +36,7 @@ Main Divs
     flex-direction: column;
 }
 
-
-
-
-
-/* Form's CSS *
-
-.input-div{
-    flex: 1 1 auto;
-    margin:1rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
-input, button{
-    flex:1;
-    width:300px;
-    border-radius: 0.5rem;
-    line-height: 1.5;
-    font-size: 1.5rem;
-    color: #350303;
-}
-
-
-  
-
-  /* CSS for table_detail.html */
+    /* CSS for table_detail.html */
 
 .content {
   display: flex;
