--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,12 +2,15 @@
 
 {% load static %}
 
+{% block extra_css %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/table_list.css' %}">
+{% endblock %}
+
 {% block content %}
+<div class="container-wrapper">
+  <div class="hero-img">
 
-<div class="container-wrapper1">
-    <div class="hero-img">
-
-    </div>
+  </div>
     <div class="content-wrapper1 main-column">
         <div class="text-area content">
             <!-- Title and about us sections -->
