--- a/templates/403.html
+++ b/templates/403.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
-
+<!-- for 403-->
 {% block content %}
 <div class="d-flex flex-column align-items-center">
     <h1>403 Forbidden</h1>
