--- a/templates/404.html
+++ b/templates/404.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load static %}
 
+<!-- for 404-->
+
 {% block content %}
 <div class="d-flex flex-column align-items-center">
     <h1>404 Page Not Found</h1>
