--- a/templates/500.html
+++ b/templates/500.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
-
+<!-- for 500-->
 {% block content %}
 <div class="d-flex flex-column align-items-center">
     <h1>500 Internal Server Error</h1>
