--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,15 +1,15 @@
-<footer class="footer mt-auto py-3  bg-success">
-    <p class="m-0 text-center text-white d-flex align-items-center justify-content-center">
-        Follow us:
+<footer class="social">
+    <div>
+        <h1>Follow us:</h1>
+    </div>
+    <div>
         <!-- Facebook link opening in a new tab -->
-        <a href="https://facebook.com" target="_blank" rel="noopener"
-            aria-label="Visit our Facebook page (opens in a new tab)">
-            <i class="fab fa-facebook-square ms-3"></i>
+        <a href="https://www.linkedin.com/in/adimora-uju-louisa-48b821179/" target="_blank" rel="noopener" aria-label="Visit our LinkedIn page (opens in a new tab)">
+            <i class="fab fa-linkedin-in"></i> LinkedIn
         </a>
         <!-- Twitter link opening in a new tab -->
-        <a href="https://twitter.com" target="_blank" rel="noopener"
-            aria-label="Visit our twitter page (opens in a new tab)">
-            <i class="fab fa-twitter-square ms-3"></i>
+        <a href="https://twitter.com/TeckData" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)">
+            <i class="fab fa-twitter-square"></i> Twitter
         </a>
-    </p>
+    </div>
 </footer>
