--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <!-- Nav menu -->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+        <nav class="navbar navbar-expand-lg navbar-dark menu_bg">
             <div class="container-fluid">
                 <!-- Logo -->
                 <a class="navbar-brand" href="{% url 'home:home' %}">
