Modify html  and re style

--- a/booking/templates/booking_edit.html
+++ b/booking/templates/booking_edit.html
@@ -24,9 +24,9 @@
 
       <!-- Div 1: Back to BookingHome -->
       <div class="home">
-        <a href="{% url 'booking:TableListView' %}" class="white_color"><i class="fas fa-arrow-alt-circle-left "></i>
+        <!-- <a href="{% url 'booking:TableListView' %}" class="white_color"><i class="fas fa-arrow-alt-circle-left "></i>
           Booking Home</a>
-      </div>
+      </div> -->
 
       <!-- Div 3: Table Booking Form -->
       <h2> Edit your Bookings</h2>
