--- a/booking/templates/booking_list.html
+++ b/booking/templates/booking_list.html
@@ -1,3 +1,4 @@
+
 {% load static %}
  <!-- This template is for management  of the booked table-->
 <!DOCTYPE html>
@@ -19,8 +20,8 @@
     <div class="content">
         <div class="header">
             <div class="headings">
-                <h2 class=" green-heading cursive-heading ">Your Bookings</h2>
-                <h3 class=" green-heading cursive-heading ">Welcome dear {{user}}</h3>
+                <h2>Your Bookings</h2>
+                <h3>Welcome dear {{user}}</h3>
             </div>
             <div class="home">
                 <!-- Div 1: Back to BookingHome -->
